Fix the background on mobile

--- a/src/features/about/About.css
+++ b/src/features/about/About.css
@@ -13,6 +13,7 @@
 
   @media (max-width: 900px) {
     padding: 0;
+    background: transparent;
   }
 }
 
