--- a/src/features/projects/Projects.css
+++ b/src/features/projects/Projects.css
@@ -9,6 +9,7 @@
   );
   @media (max-width: 900px) {
     padding: 0;
+    background: transparent;
   }
 }
 .projects-container {
