--- a/src/features/welcome/Welcome.css
+++ b/src/features/welcome/Welcome.css
@@ -19,6 +19,7 @@
     margin-top: 10rem;
     padding: 0;
     align-items: start;
+    background: transparent;
   }
 }
 
