--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,12 @@ body,
     overflow: auto;
     overflow-x: hidden;
     color: white;
-    background-color: var(--color-dark-tertiary);
+    background: linear-gradient(
+      145deg,
+      rgba(36, 38, 32, 1) 0%,
+      rgba(55, 59, 65, 1) 50%,
+      rgba(36, 38, 32, 1) 100%
+    );
   }
 }
 
